*** Add 'scrollable' property and 'iconofy'/'deiconify' methods to 'Graphic' class
*** Add 'sc8pr.gui.scroll', 'sc8pr.gui.tk' and 'sc8pr.gui.robot' modules
*** Add 'LATEX_URL', 'LATEX_FMT', 'latex_url' to 'sc8pr.misc.webcache'
*** 'WebCache' does not overwrite existing cache file if URL is different
* Add 'fakeCursor' example (depends on 'hoverable' property)
* Normalize examples to use 'play' as name of main function
** Fix blit location bug in 'Canvas.snapshot'
* Sync video capture when sketch does not run at nominal frame rate
* Add 'util.modKeys'
* Add 'invert' parameter to 'misc.plot.coordTr'
* Allow assignment to canvas by layer: cv[layer] = gr
** Fix minor bug with 'Sketch.caption' getter
*** Add 'Ellipse' and 'Arc' classes to 'sc8pr.shape'
*** Add 'sprite.onreset' event, called by 'sprite.ondraw'
*** Add 'Video' methods 'splice', 'info', '__add__', 'effect', 'effectInPlace'
*** 'Video.clip' accepts negative 'start' and 'end' arguments
*** 'Plot' constructor can take an object with 'size' attribute in place of a size literal
*** 'Plot.clockwise' and 'Plot.units' properties
*** Add 'geom.smallAngle' and 'geom.shiftAlongNormal'
*** Add 'Graphic.scale'
*** Fix bug in 'Canvas.__init__'
*** Add 'sc8pr.plot' package and 'sc8pr.misc.table' module
*** Add additional 'Graphic' and 'Canvas' methods to support new plotting/scrolling package
*** Add 'Canvas.clipArea', 'Canvas.resizeContent', 'Canvas.icons, 'Canvas.iconSize'
*** Add 'util.mix'
*** Replace 'Canvas.grid' by 'Table.grid'
*** Create 'util.circle_intersect'
*** Add 'QCircle' and make 'Circle' faster drawing
* Modify 'sc8pr.gui.dialog'
*** Create Dialog base class in 'sc8pr.gui.dialog'
*** Add 'sc8pr.gui.robot'
*** Add 'Image.autocrop' and 'util.autocrop' (depends on pygame.surfarray -> numpy)
* Fire all DRAW events after drawing the entire sketch is complete.
** Fix divid-by-zero in 'shape.Line' when length is 0


!!! Add 'util.borderRadius'